--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           Read more about it here:
           https://developer.mozilla.org/Mozilla/Mobile/Viewport_meta_tag
         -->
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="js/libs/leaflet/leaflet.css" />
         <!--
