--- a/index.html
+++ b/index.html
@@ -1,55 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>velicity</title>
-        <meta name="description" content="A privileged app stub">
+<head>
+   <meta charset="utf-8">
+   <title>velicity</title>
+   <meta name="description" content="Velicity">
 
-        <!--
-          viewport allows you to control how mobile browsers will render your content.
-          width=device-width tells mobile browsers to render your content across the
-          full width of the screen, without being zoomed out (by default it would render
-          it at a desktop width, then shrink it to fit.)
-          Read more about it here:
-          https://developer.mozilla.org/Mozilla/Mobile/Viewport_meta_tag
-        -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <link rel="stylesheet" href="css/app.css">
-        <link rel="stylesheet" href="js/libs/leaflet/leaflet.css" />
-        <!--
-        Inline JavaScript code is not allowed for privileged and certified apps,
-        due to Content Security Policy restrictions.
-        You can read more about it here: https://developer.mozilla.org/Apps/CSP
-        Plus keeping your JavaScript separated from your HTML is always a good practice!
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link rel="stylesheet" href="css/app.css">
+<link rel="stylesheet" href="css/mapbox.css">
+<script type="text/javascript" src="js/libs/mapbox.js"></script>
+<script type="text/javascript" src="js/app.js" defer></script>
 
-        We're also using the 'defer' attribute. This allows us to tell the browser that
-        it should not wait for this file to load before continuing to load the rest of
-        resources in the page. Then, once everything has been loaded, it will parse and
-        execute the deferred files.
-        Read about defer: https://developer.mozilla.org/Web/HTML/Element/script#attr-defer
-        -->
-        
-	    <script  type="text/javascript" src="js/libs/leaflet/leaflet.js"></script>
-	    <link rel="stylesheet" href="js/libs/Marker/MarkerCluster.css" />
-	    <link rel="stylesheet" href="js/libs/Marker/MarkerCluster.Default.css" />
-	    <script  type="text/javascript" src="js/libs/Marker/leaflet.markercluster-src.js"></script>
-	    <script  type="text/javascript" src="js/leaflet_numbered_markers.js"></script>
-        <script  type="text/javascript" src="js/JcDecauxKey.js"></script>
-	    <script  type="text/javascript" src="js/VelibList.js"></script>
-        <script type="text/javascript" src="js/app.js" defer></script>
-        <!--
-        The following two lines are for loading the localisations library
-        and the localisation data-so people can use the app in their
-        own language (as long as you provide translations).
-        -->
-        <link rel="prefetch" type="application/l10n" href="data/locales.ini" />
-        <script type="text/javascript" src="js/libs/l10n.js" defer></script>
-    </head>
-    <body>
-        <section>
-            <div id="map"></div>       
-		    <p id="message" style="cursor: pointer; text-decoration: underline"></p>
-        </section>
-        
-    </body>
+<link rel="prefetch" type="application/l10n" href="data/locales.ini" />
+<script type="text/javascript" src="js/libs/l10n.js" defer></script>
+</head>
+<body>
+   <section>
+      <div id="map"></div>
+      <p id="message" style="cursor: pointer; text-decoration: underline">texte vide</p>
+   </section>
+
+</body>
 </html>
